Services and Login page

--- a/src/css/creative.css
+++ b/src/css/creative.css
@@ -1893,12 +1893,12 @@ textarea.form-control {
 
 .form-check-inline {
   display: inline-flex;
-  align-items: center;
-  padding-left: 0;
+  align-items: right;
+  padding-left: 0.5;
   margin-right: 0.75rem;
 }
 
-.form-check-inline .form-check-input {
+.form-check-input {
   position: static;
   margin-top: 0;
   margin-right: 0.3125rem;
